fix css inconsistencies on mobile and web

--- a/_scss/_custom.scss
+++ b/_scss/_custom.scss
@@ -56,8 +56,11 @@ $menu-hover-color: black;
 
 #content {
   @include breakpoint(large medium only) {
-    // margin-top: 52px;
-    margin-top: 15px;
+    margin-top: 52px;
+
+    #home-image_banner {
+      margin-top: -52px;
+    }
 
     #home-essays_reports_projects {
       margin-top: 30px;
@@ -67,8 +70,11 @@ $menu-hover-color: black;
   }
 
   @include breakpoint(small only) {
-    // margin-top: 30px;
-    margin-top: 0px;
+    margin-top: 30px;
+
+    #home-image_banner {
+      margin-top: -30px;
+    }
 
     #home-essays_reports {
       margin: 20px 0 40px 0;
@@ -82,9 +88,6 @@ $menu-hover-color: black;
       margin-top: 0px;
       margin-bottom: 30px;
     }
-  }
-
-  #home-image_banner {
   }
 
   #home-content_body {
